@@ -11,6 +11,7 @@ Version 1.3
 * Fix compiler warnings and move to safer string manipulation
 * rename .c to .cpp to reflect the fact that g++ is needed
 * close popen with pclose (suggested by Martin Ettl)
+* complain if /tmp or correlation destination directory are running low on space
 
 Version 1.2
 ~~~~~~~~~~~
